--- a/Bspwm Dot-files/config/Readme
+++ b/Bspwm Dot-files/config/Readme
@@ -3,6 +3,8 @@
 //CHMOD +X EVERYTHINNNNGGGG
 ** I need to make a script to otomate this (SOON!)
 
+xdo and xdotool required for the scratchpads
+
 
 picom-git
 
